# dxc

./: .gitignore  CMakeLists.txt  README.md
demo/: demo.h  demo_console_menu_camera.c  demo_console_menu_client.c  demo_console_menu_movie.c  demo_console_menu_server.c  demo_console_menu_start.c  demo_console_menu_video_file.c  main.c  omnid.h  omnid_drive.c  omnid_drive_handler.c  omnid_drive_handler_command.c  omnid_drive_handler_command_playback.c  omnid_drive_handler_event.c  omnid_drive_handler_file.c  omnid_drive_handler_get_setting.c  omnid_drive_handler_get_state.c  omnid_drive_handler_hb.c  omnid_drive_handler_movie.c  omnid_drive_handler_set_setting.c  omnid_drive_handler_set_state.c  omnid_host.c  omnid_host_handler.c  omnid_host_handler_command.c  omnid_host_handler_event.c  omnid_host_handler_file.c  omnid_host_handler_get_setting.c  omnid_host_handler_get_state.c  omnid_host_handler_hb.c  omnid_host_handler_movie.c  omnid_host_handler_set_setting.c  omnid_host_handler_set_state.c  omnid_host_handler_stream.c
include/: dx.h  dx_camera.h  dx_console.h  dx_debug_assert.h  dx_debug_malloc.h  dx_event_control.h  dx_event_mplexer.h  dx_event_pipe.h  dx_file_avi.h  dx_file_movie.h  dx_net.h  dx_net_client.h  dx_net_dgram.h  dx_net_discovery.h  dx_net_packet.h  dx_net_packet_camera_preview.h  dx_net_packet_file.h  dx_net_packet_io.h  dx_net_packet_movie_playback.h  dx_net_server.h  dx_util_buffer.h  dx_util_clock.h  dx_util_file.h  dx_util_list.h  dx_util_lock.h  dx_util_log.h  dx_util_schedule.h  dx_v4l2.h
src/: dx_camera.c  dx_console.c  dx_debug_malloc.c  dx_event_control.c  dx_event_mplexer.c  dx_event_pipe.c  dx_file_avi.c  dx_file_avi_parser.c  dx_file_movie.c  dx_net_client.c  dx_net_dgram.c  dx_net_discovery.c  dx_net_packet.c  dx_net_packet_camera_preview.c  dx_net_packet_file.c  dx_net_packet_io.c  dx_net_packet_movie_playback.c  dx_net_server.c  dx_util_buffer.c  dx_util_clock.c  dx_util_file.c  dx_util_list.c  dx_util_lock.c  dx_util_log.c  dx_util_schedule.c  dx_v4l2.c
test/: console_test.c  debug_malloc_test.c  event_control_test.c  event_mplexer_test.c  file_avi_test.c  main.c  net_dgram_loopback_test.c  net_discovery_test.c  net_packet_file_test.c  net_pipe_test.c  net_server_connection_test.c  net_server_test.c  util_buffer_test.c  util_clock_test.c  util_list_test.c  util_lock_test.c  util_schedule_test.c
